--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Mcsquared by Panopticode</title>
+    <title>MCsquared by Panopticode</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Mcsquared</h1>
+        <h1>MCsquared</h1>
         <h2>(MC)² - Multi-Core, Many-Core code for Parallel Thinking</h2>
         <a href="https://github.com/Panopticode/MCsquared" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -89,7 +89,7 @@ make this code available and <em>open source</em>. The <a href="https://github.c
 
 <p>or, with SSH</p>
 
-<div class="highlight highlight-source-shell"><pre>$ git clone ssh://git@github.com:Panopticode/MCsquared.git</pre></div>
+<div class="highlight highlight-source-shell"><pre>$ git clone git@github.com:Panopticode/MCsquared.git</pre></div>
 
 <h3>
 <a id="todos" class="anchor" href="#todos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Todos</h3>
